--- a/workbook.ipynb
+++ b/workbook.ipynb
@@ -1,6 +1,70 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "79624b55-a473-40d4-b64a-26855319d136",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "library(astsa)\n",
+    "library(forecast)\n",
+    "library(FitAR)\n",
+    "library(Metrics)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "25fed669-b0b8-4451-9ff3-481011163ba3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAA0gAAANICAMAAADKOT/pAAAAMFBMVEUAAABNTU1oaGh8fHyM\njIyampqnp6eysrK9vb3Hx8fQ0NDZ2dnh4eHp6enw8PD////QFLu4AAAACXBIWXMAABJ0AAAS\ndAHeZh94AAAZe0lEQVR4nO3djVriOBiA0aAOOq7K/d/tCjoK/QPaL2nanvM866DIJJP2XaAU\nTQdgsjT3BGANhAQBhAQBhAQBhAQBhAQBhAQBhAQBhAQBhAQBhAQBhAQBhAQBhAQBhAQBhAQB\nhAQBhAQBhAQBhAQBhAQBhAQBhAQBhAQBhAQBhAQBhAQBhAQBhAQBhAQBhAQBhAQBhAQBhAQB\nhAQBhAQBhAQBhAQBhAQBhAQBhAQBhAQBhAQBhAQBhAQBhAQBhAQBhAQBhAQBhAQBhAQBhAQB\nhAQBhAQBhAQBhAQBhAQBhAQBhAQBhAQBhAQBhAQBhAQBhAQBhAQBhAQBhAQBhAQBhAQBhAQB\nhAQBhAQBhAQBhAQBhAQBhAQBhAQBhAQBhAQBhAQBhAQBhAQBhAQBhAQBhAQBhAQBhAQBhAQB\nhAQBhAQBhAQBhAQBhAQBhAQBhAQBhAQBhAQBCoSUYGFG7OXx4cwwBEQSEgQQEgQQEgQQEgQQ\nEgQQEgQQEgQQEgQQEgQQEgQQEgQQEgQQEgQQEgQQEgQQEgQQEgQQEgQQEgQQEgQQEgQQErTd\nvQcKCdqEBAGEBAGEBAHu/hHEQoI2IUGAZkhX90ghQZuQIICQIICQIEAjpOvHHoQEbelyHxQS\njCEkCCAkCCAkCCAkCHAZUrq+RwoJWtJBSDBZOlzshOn6LikkaBESBBASBBASBLgMqZFV7y1G\nDJKZkJiVkCCAkCBA+vnw74KQ4G5CggBCggAXIV1WNXSLEYPkJSRmJSQIICQIkM4+CglGWkJI\nLw8pPb1mHQKmqTqkr7frPqaTfZYhIETq+XjtFiMGGXG74w33af9xOLzv00uOISBE/SHt0sfx\n8kd6yDEEhKg/pH8/jmX4x7IIiVnVH9KffyHtcgwBIdqHGaoK6en55TX9/bz4sR8+2iAkZlV5\nSF9OF3cfOYaAEGchpYuvXLvFiEHu9/b28vL0dDrksB/sSEjMqx3StX3SmQ3QsuSQ0rk8Q8Bt\nlhxS4SGgn5AgwFk9QoKxfutJzS9ducWIQe6+Xbr5aZCQmFXVIb0IiYWoOqTD2+4x9xAwTur8\npM6QDm9X3oYUMASMsqiQPh/dveUeAsZYVkgVDQHnukPqvHT99iOGzENIFCYkmC4JCaYTEgTo\nC2n4a7dfHXSTCoeAM0KCAEKCAEKCAEKCAOlinxMSjJEOQoLJhAQBbgjpyk4pJBASRBASBBAS\nBBASBBASBBASTJcOQoLJhAQBhAQBhAQBhAQBhAQBhAQjNcMREowgJAiQGheFBCOc/biTZkjd\nu5+QoE1IEKAZ0qH5eesGw3/diBncf5MKh2DjhAQBhAQBhAQBWr8e9lpIw3ulkNim35DSxR8H\nIcHthATTpYOQYDIhQQAhQYCzE76FBGMJCQIICQIICQL8htQ45nAQEtxMSBAgXX44CAlGEBIE\nEBIEEBIEEBIE+D1iJyQYrR1Sx4Wumwz+fSOmkJWQyOwnpI47IiHBjYQEAYQEAYQEAX5O+b49\npMHdUkhskpAggJAgwEBIvXufkODSTzSp42vXbnTvdXE3qXAINk1IEKDr+ZCQ4E5CggBCggBd\ne5iQ4E5CggBCggBCggBCggBCggBCggBCggCde1gauG7wiivXxd2kwiHYNCFBACFBACFBACFB\nACFBgFEhDe2XQmKLhAQBhAQBhATTde9gQoK7CAkCCAkCCAkCCAkCCAkCCAkCCAkCCAkCDIU0\nrhYhsQnpYp8SEtwvpXQQEkzydWd0Q0iH9jd2XH/3VYE3qXAINuLfYzohwXipdaH1SePLQoKm\n1HGp+Unjy0KChtR5UUhwj9RzWUhwu9T7mZDgVqn/05EhjTt7KPAmFQ7B2jV3IiHBCEISEgGE\nJCQCDITUt38JCZqEJCQCCElIBBCSkAggJCExXWsfEhLcT0hlhmDlhFRmCFYuS0h3DJflJhUO\nwcoJqcwQrFx7H0oD1519XUjwa0xIpyuEBL+EVGYIVk5IZYZg5YRUZghWTkhlhmDlhFRmCFZO\nSGWGYOXGhjRy3xMSq9SxCwkJ7iWkQkOwbkIqNATrJqRCQ7BuQio0BOvWtQulget+rhES/BJS\noSFYNyEVGoJ1E1KhIVg3IRUagnUTUqEhWDchFRqCdRNSoSFYNyEVGoJV69yDrof0eZWQ4IeQ\nSg3Bqgmp1BCsmpBKDcGqCanUEKyakEoNwap170Fp6Mrvq4QEP4RUaghWTUilhmDVhFRqCFZN\nSKWGYNWEVGoIVk1IpYZg1YRUaghWbSikob1LSPCrZwcSEtxDSMWGYM3GhzR21xMSKySkYkOw\nZkIqNgRrJqRiQ7BmfTtQGrrydN0iQvrv+SkdPe3/yzUEHCaENHrXKxjSx0P69ZhlCLaoY29Z\ndUj7tPv7drr0/rpL+xxDsEVbC2mX3n4uv6VdjiHYoK7XUFcd0sXzuOEndULiZpsLyT0SOWwu\npM/nSK/vp0ueIxEmde0uqw7p8Hh21O7hI8sQbE46tPeX3v1nHSEd/tufXkfaPT17HYkgWwyp\npiFYCSE1/9pzeYZgfTrT2HRIhYdgHTrPQxVSuSFYh+iQps0j900qHIJVSBd/NL7a8+1LDyml\nm58GCYnb3BlS56GJyIlkvsnJi5CIlhp/dn3WuCbPzlXyod3bbvjNEwFDsC2pdaHjs8Y1yw/p\n8DZ8YlDEEGzKRkP6fHT3dv2bpg3BlqSOS81PmjdYQ0gVDcEKpM6LQio5BCsgpPmHYAWENP8Q\nrEDqvjyw+wgJmvruhYRUcAiWT0gVDMHyCamCIVi83hPshFRwCBZPSDUMweKNCekw+lfy3TeZ\nTDepcAgWr7mX9Jx41/wmIcE5IdUwBIsnpBqGYPGEVMMQLF5rL0l9V1x8j5DgTHsnEdIMQ7B0\nQqpiCJauN6TBvUdIcKFjJ0l9V5x/i5DgjJCqGIKlGxlSpn1LSCyUkKoYgqXr2klS3xW/3yEk\nOCekKoZg6caFlGvfEhIL1bmTpL4rhm82nZBYKCFVMQQL172PCKn0ECyckOoYgoXr2UeSkMoO\nwcIJqY4hWI7ewwqdX76y8wiJrQoNKRMhUb3OsxH69pFcpy5cISRq130nI6Q6hmAxhDSakPjV\nfSBOSHUMwWLcF5KDDWWHYDGENJqQ+NUZUm27iJCoXPd7jGrbRYRE5YQ0Xm2rxIxWH9L+OXQm\nXUPA987Q3CVq20UmhHQ8YJ/poH1tq8SMNhDSu5DILV380fxyNSaE9CddmHlWrFRq/Nn96ewm\nhPTxJCSyW39Ip8se2pGXkCaobZWYzzZCyqS2VWI2qeNS+7P5TTpq5zkSufWEVN0eIiSqtoGQ\nTp52r58f/9v9CZpPxxBsWeq8WN8eMjGkfXo7/fmW9jHzaQ/Bpm0kpJSaF0JUt0zMZSMh7X7u\nkXYx82kPwZb1xVPdHjL5od3uv88/Xncp9FTw6paJmWwlpMPj9zG7p6gJtYdgw/oO1VW3h0x+\nQfbv8Yy7p9eg6XQOwXZtJ6QsqlsmZiKkSapbJubRe1pQdXuIkKiYkKapbpmYh5CmqW6ZmEff\neyfq20GERMWENE1968QcmvuBkOobggUQ0kT1rRNzENJE9a0TcxDSRPWtEwW03osjpInqWyey\nS+3fFdvaD1LfFbMTElU43Rv1He1ufaW+HURIVOD7QZ2QgtW3TuTU04eQpqpvncip5yCCkKaq\nb53IKHVcan929pUK9w8hMbvbQzp0PpeqgZCYXU9IXXuBkGobgnoIKZcKF4ps+t6vJ6TJKlwo\nshFSNhUuFNkIKZsKF4pshJRNhQtFLr3xdO4FqfeaeQmJmQkpnwoXilz6QureCYRU2RBUovdk\nBiFNV+FCkcmIkGrcPYTEvISUUY0rRR53hnT8co27h5CYVer9VEjT1bhSZCGknGpcKbJoburU\nd8XZ12vcPYTEnFpbWkiRalwpchBSVjWuFDkIKasaV4oc7g/p0P6BrDUQEjNqb2ghRapxpchA\nSHnVuFJk0B9S/y7Q+p0VVRASMxJSXlUuFeG6tnPqv+r7mir3DiFRUP8JQc2vDewCVe4dQqIg\nIU27SYVDMIPmozIhZVblUjFZ48h152YWUqAql4qpmmf3jAypSkKimDtCWtweICSKEdLUm1Q4\nBMWlg5Am3qTCISiuGVLPVk4D19VLSBTSuqsRUnaLW0auE9L0m1Q4BKUJafpNKhyCwtqvDw2E\ntLwdQEhEGjhpu/kNfd8qpDjLW0e+9G651H+h4zuXtwMIiUD97xUSUsRNKhyCHPp/noKQIm5S\n4RDk0BtSx1OjoTuv5e0AQiJOfwLtkAYPSyxvBxAScXoT6DjoPRTSAre/kIhzS0gdLyi1vnmB\n219IxOkLqeucbyEJiW69J/d0hDSwiYUUZoELSX9IqeMzIQmJHkLKfZMKhyBcXyHptm87+4YF\nbn8hEaWnkO4vDG3iOn8o8TAhEeWekAa38BI3v5AI0vNKa/dDPSEJiW7dIfUcexCSkOgmpPw3\nqXAIgnWf1d13osPqtrCQiHFXSOvbwEIiRmdIfaewrm8DC4kYqeOSkIJvUuEQxOqsp2c7Cmns\nTSocglhCKnGTCocg1j0hrXH7CokI3UcYhBR8kwqHIFTnMe/ezbjC7SskAnSfzbClzSgkpus5\nT3VLm1FITCckITFdc3Ol7i+vmpCYqu+tfJvaikJiop43SmxsKwqJabq2Veq7Yr2ExDRCOhES\nk/S9c29rG1FITNH3Poneq9ZKSEzRH9LGtqGQmKL3jRJb24ZCYgohfRMSEwy8T2Jj21BITNAf\n0tY2oZCYQEj/CIkJhPSPkJig/z2wW9uEQmKCLb2ZfJiQGK9/O21uCwqJ8WynH0JiPNvph5AY\nz3b6ISTGs51+CInxbKcfQmI0m+lX+ZBeHlJ6es06BGXYTL8KhvT1YvdjOtlnGYKibKZfpUPa\np/3H4fC+Ty85hqAom+lX6ZB26eN4+SM95BiCbNI/51+bbTb1KR3Svw3RPqkxnRs5BLmk1oWD\nkM6VDunPv5B2OYYgk9R10VY6UzSkp+eX1/T38+LHfvhog01UlZ7Hc7bSmaIh/TxsS2n3kWMI\nckg9n9lKZ0q+jvT29vLy9HQ65LAf7MgmqklzY3Q+Xdo8ZzYwrH1UqPeaLRMSw4R0EyExqGNT\npN5rNkxIDBLSbYTEICHdRkgM6toUqfea7RISQzq3hJDahMSQ7i2R+q/aKiExpD8k2+iCkBgi\npBsJiQF9GyLZRg1CYoCQbiUkBgjpVkJiQO+G2N4vQLpCSPTr3w5+GkCDkOgnpJsJiX4D28Em\nuiQkeg1tBpvokpDoZTPcTkj0shluJyS+dPxwTpvhdkLiS/tHMdgKdxASJx13RLbCHYTEiZCm\nERInqX3ZVriDkDhJrU9shHsIiaPU/tRGuIeQOGquuPdJ3ElIHAlpIiFx1Fpxp3ffR0gcOhfc\nNriLkDhY8OmExMGCTyckrHcAIWG9AwgJ6x1ASFjvAELCcgcQEpY7gJCw3AGEhOUOICSsdgAh\nYbUDCGlzWud1W+0AQtqa1ErJagcQ0tZ8/TyGs5YsdgQhbczvj3/s+NGqjCakbbGymQhpUyxs\nLkLaFAubi5C2xLpmI6QNsaz5CGlDLGs+QtoOq5qRkLbDqmYkpM2wqDkJaTMsak5C2gyLmpOQ\ntsKaZiWkrbCmWQlpK6xpVkLaCEual5A2wpLmJaSNsKR5CWkbrGhmQtoGK5qZkDbBguYmpE2w\noLkJaRMsaG5C2gLrmZ2QtsB6ZiekLbCe2QlpAyxnfkLaAMuZn5A2wHLmJ6T1s5oFCGn9rGYB\nQlo/q1mAkFbPYpYgpBVKA5+Rh5DW5/J38FnLIoS0Ouly/axlEUJancuQLGUZQlqb9PPhcHmJ\nnIS0Muns4+UlchLSuqSeP8lMSKuSmhesZCFCWpVmSBayFCGtSetonYUsRUgr0n75yEKWIqT1\naJ8ZZB2LEdJqpPan1rEYIS1R6lqg5teSZSxISAuUulLq+IJlLEdIy/N9HOHqmyWsYkFCWp6f\nF1uvnJtqFQsS0uKc5+MEhloIaWkaj+i8XlQHIS1M+5hCsl4VENKydD4XslzzE9KyWJlKCWlR\nLEythLQk1qVaQloS61ItIS2IZamXkBbEstRLSMthVSompOWwKhUT0nJYlYoJaTEsSs2ENI8b\n/oXp6L6bMBshzePK+XE/Df1+2/rXZNGENIsrZ2x35bP6NVk2Ic1iOKTOB3SrX5NlE9Ic0s+H\n3mubn6x9SZZOSHMYfFtr6vx07UuydEKaweC9TPOL3ku+CEKawdDznvaXhh8HUgchlTd0JK7z\nreQ9X6ciQiovdV48fdr3YG/dC7IGQiru8qDc2d1T74u0fvhw/YRUXOte6BTQ0KkOfkxQ/YRU\nWuezoGtnDOWZCnGEVNqa/20bJqRM+p/vsEZCyiL1Hh9Y/D+NTkLKof811KX/y+ghpAwGTo9b\n+L+MPkIK93sErvXPcBx7tYQUrf/d4TJaMSEFS32fyWjVhBSqVcvXYYd07RVXlk5IY914KEFD\n2yCkkbpeKFrAtMlESON0vEfIPc+WCWmc9kuu9c+ZjIQ0SuslV3dHGyekMVLjz+onTG5CGqH1\nQxcqny/5CWmExg9d8LAOIY3QOMZQ92QpQ0i9+t5Q1DzqnX8m1E9IfTrvapymQDchDUyhdeJc\nBfOiTusO6crfM3B1an+DjOi36pCGDwT0/1yFjheKZMSghYc0+I1p6PrU9dit/df+e6FIRgxa\ndkiDdznt0+HaIzQeu7V+ceuVvwW+LTqk4bucgb+p88cq9LwHL7k74rolh3TLXU7Xu4ZSs57h\nMWXEdQsOaegup+900vb7VfuDg9stLKTUvgfp/N7O+5zOx2hOOyXCwkL6jWHoHQwXwaTOrzau\n1xHTLC6k7+c43Xc5P1d3/GVDz4F0xEQLDOnQd5fTuub8+qHDezpiqmWG1Pfd/b+DdfAUh7tG\ngw6rCqn3CJ5UyGwNId3yLAiyWk9Izj9gRqsIyYE35raWkHTErNYRko6Y2UpCgnkJCQIICQII\nCQIICQIICQIICQIICQIICQIICQIICQIUDem/56fTD2B82v+XawiYRcGQPh7Sr8csQ8BMCoa0\nT7u/b6dL76+7tM8xBMykYEi79PZz+S3tcgwBMykY0uXP0Gr9LencyCFgJu6RIEDZ50iv76dL\nniOxNiUPfz+ePXZ7+MgyBMyj7OtI+9PrSLunZ68jsS7ObIAAQoIAlYYECzNiL48Pp9JBb2Jm\n96t3ZiWnJqQLZna/emcmpNmY2f3qnZmQZmNm96t3ZkKajZndr96ZCWk2Zna/emcmpNmY2f3q\nnZmQZmNm96t3ZkKajZndr96ZCWk2Zna/emcmpNmY2f3qnZmQZmNm96t3ZqsPCdZGSBBASBBA\nSBBASBBASBBASBBASBBASBBASBBASBBASBBASBBASBBASBBASBCgfEj7XdrtB38z2QxeHn4m\nVd/8/vveSJXN7O1PSn++fmtjZTP7OJtPqakVD+nrN/09lB522P40qd1xveub38fuayNVNrPX\natfsffc1tWPkxaZWOqT/0u7t8LZLV37LX1lv6c/n/vCS/lQ5v6ev3zJS28x2n9P5eDr++uDa\nZvbn9DuN92U3Z+mQ9un18+Pf9Fx43EFPX6tw3GHrm9/f71/XU9nM/p721o/jL7SvbGaHNMfm\nLB3SUzre4b6lp8Lj3uK48tXN7z09fu0Ylc3sT3r7d7GymR2+HwofGy83tdIhnf3fojYf6bHC\n+T2m96/JVDazh3R43p0eEtc2s8Pz90O755JTE9KPl+PDgNrm95z+HqoMKaWvX2p/qG5mn1vy\neLRh93IQ0hzed8f7/8rmd3pQUmlIx4MNf8r+b/9Gz6dDdcfnRUIq7mP3ePyjsvk9HA8vVxrS\n8TnS+/HIcmUz+3xo8fnQ7rPxlzWHtKts0X88fr3WUNf8/pwOOn1Npq6Zne+ilc3s8+nb8Znb\nx7HxclOb56jdezVHeL69Pzx+vUZf1/zOf199XTM7f8mgspmdN15uaqVDej79P/b1dFylHq/p\n8ftSXfM7D6mumX1P5/24cJXN7Ptu6PQSV7mpObPh8L07fKlxflWe2fD57Ojj+ETkb3UzO+zT\n8eS6fdmTLoo/rn04/Q/28fo3FvTn9//7Nc7v+6FKZTN7/p1OZTP7PsGu7NSKh/R1Zm7pUYed\nPYCqcX7fIdU2s9fHf9OpbWaH3/kUm1otR1pg0YQEAYQEAYQEAYQEAYQEAYQEAYQEAYQEAYQE\nAYQEAYQEAYQEAYQEAYQEAYQEAYQEAYQEAYQEAYQEAYQEAYQEAYQEAYQEAYQEAYQEAYQEAYQE\nAYQEAYQEAYQEAYQEAYQEAYS0BOlMid91z91slCUQUvVslMUQUM1snMUQUs1snMX4F9Lxz8//\nntPu+XDYp/T1O7tfHtLuZcbZbZ2QFuMypOfj86XXx+PHY0lPp+dPj7NOcNOEtBiXIT1+HF6+\nP+4Oh9fjpY/H9DrvFDdMSItxGdJ/p0vv358/pY/PSx/pacb5bZuQFqPxHOlw/vH34DjzsPKL\nIaSaWfnFGA5pvnlxZAMsxlBITw4zzExIizEU0t+0ezscXhxsmI2QFmMopMPpBaW0e59tdlsn\npMUYDOl4ZkP6o6PZCAkCCAkCCAkCCAkCCAkCCAkCCAkCCAkCCAkCCAkCCAkCCAkCCAkCCAkC\nCAkCCAkCCAkCCAkCCAkCCAkCCAkCCAkCCAkCCAkCCAkCCAkCCAkCCAkCCAkCCAkCCAkC/A8T\n+xNhH9aZ4AAAAABJRU5ErkJggg==",
+      "text/plain": [
+       "plot without title"
+      ]
+     },
+     "metadata": {
+      "image/png": {
+       "height": 420,
+       "width": 420
+      }
+     },
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df <- JohnsonJohnson\n",
+    "df <- c(df)\n",
+    "plot.ts(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "469c6bd6-2e5c-4495-bba4-4af5c2fb4481",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "R",
+   "language": "R",
+   "name": "ir"
+  },
+  "language_info": {
+   "codemirror_mode": "r",
+   "file_extension": ".r",
+   "mimetype": "text/x-r-source",
+   "name": "R",
+   "pygments_lexer": "r",
+   "version": "3.6.3"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
