--- a/workbook.ipynb
+++ b/workbook.ipynb
@@ -566,6 +566,7 @@
     }
    ],
    "source": [
+    "# Diagnose noise models for m2.1 and m2.2\n",
     "plot.new(); par(new = TRUE, fig=c(0,1,0.5,1), mai = c(0.4,0.7,0.3,0.2))\n",
     "\n",
     "m2.1.theoretical_acf <- ARMAacf(ma = c(m2.1$fit$coef[1]), lag = 30)\n",
@@ -650,11 +651,316 @@
   },
   {
    "cell_type": "markdown",
+   "id": "12f372d3-a253-40fd-96a1-6be01c504623",
+   "metadata": {},
+   "source": [
+    "# 4 Model Comparison and Selection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b8c3daf-97af-489c-a165-c90ec7ec540a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cross Validation\n",
+    "\n",
+    "RMSE <- c(m1.1=0, m1.2=0, m2.1=0, m2.2=0)\n",
+    "\n",
+    "for (i in c(30:50)) {\n",
+    "  m1.noise_train <- m1$residuals[1:i]\n",
+    "  m2.train <- df$New.Cases[1:i]\n",
+    "  \n",
+    "  test_set <- df$New.Cases[(i+1):(i+10)]\n",
+    "  \n",
+    "  m1.1.noiseForecast <- sarima.for(m1.noise_train, n.ahead=10, p=0,d=0,q=0, P=0,D=0,Q=1,S=14)$pred\n",
+    "  m1.2.noiseForecast <- sarima.for(m1.noise_train, n.ahead=10, p=0,d=0,q=0, P=1,D=0,Q=1,S=14)$pred\n",
+    "  \n",
+    "  m1.1.forecast <- m1.1.noiseForecast + m1$fitted.values[(i+1):(i+10)]\n",
+    "  m1.2.forecast <- m1.2.noiseForecast + m1$fitted.values[(i+1):(i+10)]\n",
+    "  \n",
+    "  m2.1.forecast <- sarima.for(m2.train, n.ahead=10, p=0,d=1,q=1, P=0,D=1,Q=0,S=7)$pred\n",
+    "  m2.2.forecast <- sarima.for(m2.train, n.ahead=10, p=0,d=1,q=1, P=1,D=1,Q=1,S=7)$pred\n",
+    "  \n",
+    "  RMSE[1] = RMSE[1] + sum((m1.1.forecast - test_set)^2)\n",
+    "  RMSE[2] = RMSE[2] + sum((m1.2.forecast - test_set)^2)\n",
+    "  RMSE[3] = RMSE[3] + sum((m2.1.forecast - test_set)^2)\n",
+    "  RMSE[4] = RMSE[4] + sum((m2.2.forecast - test_set)^2)\n",
+    "}\n",
+    "\n",
+    "RMSE <- sqrt(RMSE/(21*10))\n",
+    "\n",
+    "RMSE.revised <- c(m1.1=0)\n",
+    "df$time <- c(1:60)\n",
+    "\n",
+    "for (i in c(30:50)) {\n",
+    "  m1.noise_train <- m1$residuals[1:i]\n",
+    "  m1.signal_train <- df[c(1:i), c(1:5)]\n",
+    "  m1.signal_predict_vars <- df[c((i+1):(i+10)), c(1,3,4,5)]\n",
+    "  test_set <- df$New.Cases[(i+1):(i+10)]\n",
+    "  m1.signal_train$time\n",
+    "  \n",
+    "  \n",
+    "  m1.model_i <- lm(m1.signal_train$New.Cases ~ m1.signal_train$time + I(m1.signal_train$time^2) + \n",
+    "                     m1.signal_train$DoW*m1.signal_train$time + \n",
+    "                     m1.signal_train$DoW*I(m1.signal_train$time^2) + \n",
+    "                     m1.signal_train$MoY + \n",
+    "                     m1.signal_train$DoW*cos(2*pi*m1.signal_train$time*(1/12)) + \n",
+    "                     m1.signal_train$DoW*sin(2*pi*m1.signal_train$time*(1/12)),\n",
+    "                   data = m1.signal_train)\n",
+    "  new_data <- data.frame(time = 31, DoW = \"Monday\", MoY = \"July\")\n",
+    "  \n",
+    "  predict.lm(m1.model_i, newdata = new_data)  \n",
+    "    \n",
+    "    \n",
+    "  m1.1.noiseForecast <- sarima.for(m1.noise_train, n.ahead=10, p=0,d=0,q=0, P=0,D=0,Q=1,S=14)$pred\n",
+    "  \n",
+    "  m1.1.forecast <- m1.1.noiseForecast + m1$fitted.values[(i+1):(i+10)]\n",
+    "\n",
+    "  RMSE.revised[1] = RMSE.revised[1] + sum((m1.1.forecast - test_set)^2)\n",
+    "}\n",
+    "\n",
+    "RMSE.revised <- sqrt(RMSE.revised/(21*10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "72ffdaa5-6337-44e4-ac5f-6f52242627f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "11.0974366634558"
+      ],
+      "text/latex": [
+       "11.0974366634558"
+      ],
+      "text/markdown": [
+       "11.0974366634558"
+      ],
+      "text/plain": [
+       "[1] 11.09744"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "11.1009454353857"
+      ],
+      "text/latex": [
+       "11.1009454353857"
+      ],
+      "text/markdown": [
+       "11.1009454353857"
+      ],
+      "text/plain": [
+       "[1] 11.10095"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "11.2021538915669"
+      ],
+      "text/latex": [
+       "11.2021538915669"
+      ],
+      "text/markdown": [
+       "11.2021538915669"
+      ],
+      "text/plain": [
+       "[1] 11.20215"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "11.0541185922565"
+      ],
+      "text/latex": [
+       "11.0541185922565"
+      ],
+      "text/markdown": [
+       "11.0541185922565"
+      ],
+      "text/plain": [
+       "[1] 11.05412"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "11.0612614493993"
+      ],
+      "text/latex": [
+       "11.0612614493993"
+      ],
+      "text/markdown": [
+       "11.0612614493993"
+      ],
+      "text/plain": [
+       "[1] 11.06126"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "11.1937415630713"
+      ],
+      "text/latex": [
+       "11.1937415630713"
+      ],
+      "text/markdown": [
+       "11.1937415630713"
+      ],
+      "text/plain": [
+       "[1] 11.19374"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "11.7969133404285"
+      ],
+      "text/latex": [
+       "11.7969133404285"
+      ],
+      "text/markdown": [
+       "11.7969133404285"
+      ],
+      "text/plain": [
+       "[1] 11.79691"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "11.7981448675221"
+      ],
+      "text/latex": [
+       "11.7981448675221"
+      ],
+      "text/markdown": [
+       "11.7981448675221"
+      ],
+      "text/plain": [
+       "[1] 11.79814"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "11.8641976065865"
+      ],
+      "text/latex": [
+       "11.8641976065865"
+      ],
+      "text/markdown": [
+       "11.8641976065865"
+      ],
+      "text/plain": [
+       "[1] 11.8642"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "11.6644310402763"
+      ],
+      "text/latex": [
+       "11.6644310402763"
+      ],
+      "text/markdown": [
+       "11.6644310402763"
+      ],
+      "text/plain": [
+       "[1] 11.66443"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "11.6720938755253"
+      ],
+      "text/latex": [
+       "11.6720938755253"
+      ],
+      "text/markdown": [
+       "11.6720938755253"
+      ],
+      "text/plain": [
+       "[1] 11.67209"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "11.7989995725922"
+      ],
+      "text/latex": [
+       "11.7989995725922"
+      ],
+      "text/markdown": [
+       "11.7989995725922"
+      ],
+      "text/plain": [
+       "[1] 11.799"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Information Criteria\n",
+    "m1.1$AIC; m1.1$AICc; m1.1$BIC\n",
+    "m1.2$AIC; m1.2$AICc; m1.2$BIC\n",
+    "\n",
+    "m2.1$AIC; m2.1$AICc; m2.1$BIC\n",
+    "m2.2$AIC; m2.2$AICc; m2.2$BIC\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9922239b-55bb-4d8a-9ec5-e73038fb5bc3",
    "metadata": {},
    "source": [
-    "# 4 Model Comparison and Selection\n",
-    "\n",
     "To assess the four models, time series cross validation was performed by iterating daily from 7/19/2020 to 8/8/2020 with the training set compromised of those dates before and on the iterated value and the testing set 10 days following the iterated value. This results in 21 overlapping testing windows, each consisting of 10 days of data, beginning with the testing window 7/19/2020-7/28/2020. Model forecasting performance is assessed through root-mean-square prediction error (RMSPE). Model fit with penalties for increasing penalty are assesed through 3 information criteria: AIC, AICc, and BIC. Information criteria and RMSPE are given in table 1.\n",
     "\n",
     "\\begin{table}[!h]\n",
@@ -720,7 +1026,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# m1.1 FORECAST ------------------------------\n",
+    "# m1.1 forecast\n",
     "\n",
     "m1.1.predict <- function(time = 61, day = \"Wednesday\", month = \"August\"){\n",
     "  C <- m1$coefficients\n",
@@ -808,6 +1114,7 @@
     }
    ],
    "source": [
+    "#shadding error\n",
     "plot.ts(df$New.Cases, type = \"o\", lwd = 2.5, xlim = c(1,70), ylim = c(400, 1800),\n",
     "        xaxt = \"n\", xlab = \"Date\", ylab = \"New Cases\", main = \"New Cases of COVID-19\")\n",
     "\n",
