--- a/Stat 153 Final Project.ipynb
+++ b/Stat 153 Final Project.ipynb
@@ -454,21 +454,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6c29780e-ca60-4221-bd26-0e2c3b2aa0b3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "m2.spec <- mvspec(m2) #spectral density of m2 \n",
-    "#theoretical spectral density of differencing + MA(1)\n",
-    "m2.1.theoretical_spec <- arma.spec(ma = m2.1$fit$coef[1]) \n",
-    "m2.2.theoretical_spec <- arma.spec(ma = c(m2.2$fit$coef[1],0,0,0,0,0,\n",
-    "                                   m2.2$fit$coef[3],m2.2$fit$coef[1]*m2.2$fit$coef[3]), \n",
-    "                                   ar = c(0,0,0,0,0,0,m2.2$fit$coef[2]))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 50,
    "id": "dd9967ae-74e3-4157-bd34-e1e05ae9b81e",
    "metadata": {},
@@ -554,6 +539,13 @@
     "abline(h = 0.05, col = \"blue\", lty = 2)\n",
     "\n",
     "# SPECTRAL DENSITY ----------\n",
+    "m2.spec <- mvspec(m2) #spectral density of m2 \n",
+    "#theoretical spectral density of differencing + MA(1)\n",
+    "m2.1.theoretical_spec <- arma.spec(ma = m2.1$fit$coef[1]) \n",
+    "m2.2.theoretical_spec <- arma.spec(ma = c(m2.2$fit$coef[1],0,0,0,0,0,\n",
+    "                                   m2.2$fit$coef[3],m2.2$fit$coef[1]*m2.2$fit$coef[3]), \n",
+    "                                   ar = c(0,0,0,0,0,0,m2.2$fit$coef[2]))\n",
+    "\n",
     "par(new = TRUE, fig=c(0,1,0,0.47), mai = c(0.5,0.7,0.2,0.2))\n",
     "plot(m2.spec$freq, m2.spec$spec, type = \"l\", ylab = \"\", yaxt = \"n\", xlab = \"\",\n",
     "     lwd = 2)\n",
