--- a/workbook.ipynb
+++ b/workbook.ipynb
@@ -181,15 +181,19 @@
     "    \n",
     "    # seasonal coefficient polynomial. \n",
     "    # Polynomials for \"big Phis\" and \"Big Thetas\":\n",
-    "    if(Q > 0){\n",
-    "        for(i in c(1:(P-1))){\n",
-    "            ARpoly$big <- c(ARpoly$big, model$ttable[i+p+q], rep(0, (S-1)))\n",
+    "    if(P > 0){\n",
+    "        if(P > 1){\n",
+    "            for(i in c(1:(P-1))){\n",
+    "                ARpoly$big <- c(ARpoly$big, model$ttable[i+p+q], rep(0, (S-1)))\n",
+    "            }\n",
     "        }\n",
     "        ARpoly$big <- c(ARpoly$big, model$ttable[p+q+P])\n",
     "    }\n",
-    "    if(P > 0){\n",
-    "        for(i in c(1:(Q-1))){\n",
-    "            MApoly$big <- c(MApoly$big, model$ttable[i+p+q+P], rep(0, (S-1)))\n",
+    "    if(Q > 0){\n",
+    "        if(Q > 1){\n",
+    "            for(i in c(1:(Q-1))){\n",
+    "                MApoly$big <- c(MApoly$big, model$ttable[i+p+q+P], rep(0, (S-1)))\n",
+    "            }\n",
     "        }\n",
     "        ARpoly$big <- c(ARpoly$big, model$ttable[p+q+P+Q])\n",
     "    }\n",
@@ -209,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 94,
    "id": "115b9250-64e9-4f53-84ff-729cbc6695e9",
    "metadata": {},
    "outputs": [
@@ -249,10 +253,29 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "1"
+      ],
+      "text/latex": [
+       "1"
+      ],
+      "text/markdown": [
+       "1"
+      ],
+      "text/plain": [
+       "[1] 1"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "polymul(c(1,2,30,4,5), c(1,0))"
+    "polymul(c(1,2,30,4,5), c(1,0))\n",
+    "c(1:1)"
    ]
   },
   {
