solved rounding issue

--- a/workbook.ipynb
+++ b/workbook.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 42,
    "id": "1d1c908b-c53e-4c39-bfc0-810694a99a74",
    "metadata": {},
    "outputs": [],
    "source": [
-    "source(\"TSanalysis.R\")"
+    "source(\"TSanalysis.R\")\n",
+    "df <- read.csv(\"projectdata_covid.csv\")"
    ]
   },
   {
@@ -64,6 +65,105 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 43,
+   "id": "addcbe76-b53e-4b19-9bb6-25bbb0b1a10c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>0</li><li>0</li><li>0</li><li>0</li><li>0</li><li>0</li><li>0</li></ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 0\n",
+       "\\item 0\n",
+       "\\item 0\n",
+       "\\item 0\n",
+       "\\item 0\n",
+       "\\item 0\n",
+       "\\item 0\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 0\n",
+       "2. 0\n",
+       "3. 0\n",
+       "4. 0\n",
+       "5. 0\n",
+       "6. 0\n",
+       "7. 0\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] 0 0 0 0 0 0 0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>0</li><li>0</li><li>0</li><li>0</li><li>0</li><li>0</li><li>0</li><li>0</li></ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 0\n",
+       "\\item 0\n",
+       "\\item 0\n",
+       "\\item 0\n",
+       "\\item 0\n",
+       "\\item 0\n",
+       "\\item 0\n",
+       "\\item 0\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 0\n",
+       "2. 0\n",
+       "3. 0\n",
+       "4. 0\n",
+       "5. 0\n",
+       "6. 0\n",
+       "7. 0\n",
+       "8. 0\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] 0 0 0 0 0 0 0 0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "source(\"TSanalysis.R\")\n",
+    "\n",
+    "m2.2 <- sarima(df$New.Cases, p=0,d=1,q=1, P=1,D=1,Q=1,S=7, details = FALSE)\n",
+    "\n",
+    "trueAR <- c(rep(0,6), m2.2$fit$coef[[2]])\n",
+    "trueMA <- c(m2.2$fit$coef[[1]], rep(0,5), m2.2$fit$coef[[3]], m2.2$fit$coef[[1]]*m2.2$fit$coef[[3]])\n",
+    "\n",
+    "test <- backshiftPolynomialCoefficients(unname(m2.2$fit$coef), p=0,q=1, P=1,Q=1,S=7)\n",
+    "trueAR - test$AR[]; trueMA - test$MA[]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 120,
    "id": "71653d47-7a1a-4a7f-ab38-7506c37d2ca8",
    "metadata": {},
@@ -86,187 +186,6 @@
     "    \n",
     "    acfs <- acf2(df, max.lag = (length(df)/2), plot = plot)\n",
     "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "addcbe76-b53e-4b19-9bb6-25bbb0b1a10c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style>\n",
-       ".list-inline {list-style: none; margin:0; padding: 0}\n",
-       ".list-inline>li {display: inline-block}\n",
-       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
-       "</style>\n",
-       "<ol class=list-inline><li>0</li><li>0</li><li>0</li><li>0</li><li>0</li><li>0</li><li>-0.194730971700103</li></ol>\n"
-      ],
-      "text/latex": [
-       "\\begin{enumerate*}\n",
-       "\\item 0\n",
-       "\\item 0\n",
-       "\\item 0\n",
-       "\\item 0\n",
-       "\\item 0\n",
-       "\\item 0\n",
-       "\\item -0.194730971700103\n",
-       "\\end{enumerate*}\n"
-      ],
-      "text/markdown": [
-       "1. 0\n",
-       "2. 0\n",
-       "3. 0\n",
-       "4. 0\n",
-       "5. 0\n",
-       "6. 0\n",
-       "7. -0.194730971700103\n",
-       "\n",
-       "\n"
-      ],
-      "text/plain": [
-       "[1]  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000 -0.194731"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<style>\n",
-       ".list-inline {list-style: none; margin:0; padding: 0}\n",
-       ".list-inline>li {display: inline-block}\n",
-       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
-       "</style>\n",
-       "<ol class=list-inline><li>-0.529691719165791</li><li>0</li><li>0</li><li>0</li><li>0</li><li>0</li><li>-0.390688442836976</li><li>0.206944432944524</li></ol>\n"
-      ],
-      "text/latex": [
-       "\\begin{enumerate*}\n",
-       "\\item -0.529691719165791\n",
-       "\\item 0\n",
-       "\\item 0\n",
-       "\\item 0\n",
-       "\\item 0\n",
-       "\\item 0\n",
-       "\\item -0.390688442836976\n",
-       "\\item 0.206944432944524\n",
-       "\\end{enumerate*}\n"
-      ],
-      "text/markdown": [
-       "1. -0.529691719165791\n",
-       "2. 0\n",
-       "3. 0\n",
-       "4. 0\n",
-       "5. 0\n",
-       "6. 0\n",
-       "7. -0.390688442836976\n",
-       "8. 0.206944432944524\n",
-       "\n",
-       "\n"
-      ],
-      "text/plain": [
-       "[1] -0.5296917  0.0000000  0.0000000  0.0000000  0.0000000  0.0000000 -0.3906884\n",
-       "[8]  0.2069444"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<style>\n",
-       ".list-inline {list-style: none; margin:0; padding: 0}\n",
-       ".list-inline>li {display: inline-block}\n",
-       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
-       "</style>\n",
-       "<ol class=list-inline><li>0</li><li>0</li><li>0</li><li>0</li><li>0</li><li>0</li><li>-0.1947</li></ol>\n"
-      ],
-      "text/latex": [
-       "\\begin{enumerate*}\n",
-       "\\item 0\n",
-       "\\item 0\n",
-       "\\item 0\n",
-       "\\item 0\n",
-       "\\item 0\n",
-       "\\item 0\n",
-       "\\item -0.1947\n",
-       "\\end{enumerate*}\n"
-      ],
-      "text/markdown": [
-       "1. 0\n",
-       "2. 0\n",
-       "3. 0\n",
-       "4. 0\n",
-       "5. 0\n",
-       "6. 0\n",
-       "7. -0.1947\n",
-       "\n",
-       "\n"
-      ],
-      "text/plain": [
-       "[1]  0.0000  0.0000  0.0000  0.0000  0.0000  0.0000 -0.1947"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<style>\n",
-       ".list-inline {list-style: none; margin:0; padding: 0}\n",
-       ".list-inline>li {display: inline-block}\n",
-       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
-       "</style>\n",
-       "<ol class=list-inline><li>-0.5297</li><li>0</li><li>0</li><li>0</li><li>0</li><li>0</li><li>-0.3907</li><li>0.20695379</li></ol>\n"
-      ],
-      "text/latex": [
-       "\\begin{enumerate*}\n",
-       "\\item -0.5297\n",
-       "\\item 0\n",
-       "\\item 0\n",
-       "\\item 0\n",
-       "\\item 0\n",
-       "\\item 0\n",
-       "\\item -0.3907\n",
-       "\\item 0.20695379\n",
-       "\\end{enumerate*}\n"
-      ],
-      "text/markdown": [
-       "1. -0.5297\n",
-       "2. 0\n",
-       "3. 0\n",
-       "4. 0\n",
-       "5. 0\n",
-       "6. 0\n",
-       "7. -0.3907\n",
-       "8. 0.20695379\n",
-       "\n",
-       "\n"
-      ],
-      "text/plain": [
-       "[1] -0.5297000  0.0000000  0.0000000  0.0000000  0.0000000  0.0000000 -0.3907000\n",
-       "[8]  0.2069538"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "df <- read.csv(\"projectdata_covid.csv\")\n",
-    "\n",
-    "m2.2 <- sarima(df$New.Cases, p=0,d=1,q=1, P=1,D=1,Q=1,S=7, details = FALSE)\n",
-    "\n",
-    "TrueAR <- c(rep(0,6), m2.2$fit$coef[[2]])\n",
-    "TrueMA <- c(m2.2$fit$coef[[1]], rep(0,5), m2.2$fit$coef[[3]], m2.2$fit$coef[[1]]*m2.2$fit$coef[[3]])\n",
-    "\n",
-    "test <- backshiftPolynomialCoefficients(m2.2$ttable, p=0,q=1, P=1,Q=1,S=7)\n",
-    "TrueAR; TrueMA; test$AR[]; test$MA[]"
    ]
   }
  ],
