--- a/workbook.ipynb
+++ b/workbook.ipynb
@@ -2,13 +2,114 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "1d1c908b-c53e-4c39-bfc0-810694a99a74",
+   "execution_count": 98,
+   "id": "2eaf4796-b53d-4386-b01b-a065b4e3c517",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m.\u001b[39m\u001b[32m.\u001b[39m\u001b[32m.\u001b[39m\u001b[32m.\u001b[39m\u001b[32m.\u001b[39m\u001b[32m.\u001b[39m\n"
+     ]
+    }
+   ],
+   "source": [
+    "if (!require(testthat)) install.packages('testthat')\n",
+    "library(testthat)\n",
+    "if (!require(devtools)) install.packages('devtools')\n",
+    "library(devtools)\n",
+    "\n",
+    "source(\"TSanalysis.R\")\n",
+    "df <- read.csv(\"projectdata_covid.csv\")\n",
+    "test_dir(\"tests/testthat\", reporter=c(\"minimal\")) \n",
+    "\n",
+    "# reporter args:\n",
+    "# \"minimal\" for ..F\n",
+    "# \"progress\" for verbose (default)\n",
+    "# \"location\" for test line number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "455a7ecf-2279-462f-a4ce-3b23d94018ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>2</li><li>5</li><li>7</li></ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 2\n",
+       "\\item 5\n",
+       "\\item 7\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 2\n",
+       "2. 5\n",
+       "3. 7\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] 2 5 7"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "1.1e-10"
+      ],
+      "text/latex": [
+       "1.1e-10"
+      ],
+      "text/markdown": [
+       "1.1e-10"
+      ],
+      "text/plain": [
+       "[1] 1.1e-10"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "0.385543289429531"
+      ],
+      "text/latex": [
+       "0.385543289429531"
+      ],
+      "text/markdown": [
+       "0.385543289429531"
+      ],
+      "text/plain": [
+       "[1] 0.3855433"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "source(\"TSanalysis.R\")\n",
-    "df <- read.csv(\"projectdata_covid.csv\")"
+    "x <- c(1,3,3,1,4,4,5)\n",
+    "localMaxima(x)\n",
+    "10**-10 + 10**-11\n",
+    "1.1**-10"
    ]
   },
   {
