added TSA library

--- a/workbook.ipynb
+++ b/workbook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 199,
    "id": "2eaf4796-b53d-4386-b01b-a065b4e3c517",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32m.\u001b[39m\u001b[32m.\u001b[39m\u001b[32m.\u001b[39m\u001b[32m.\u001b[39m\u001b[32m.\u001b[39m\u001b[32m.\u001b[39m\u001b[32m.\u001b[39m\u001b[32m.\u001b[39m\n"
+      "\u001b[32m.\u001b[39m\u001b[32m.\u001b[39m\u001b[32m.\u001b[39m\u001b[32m.\u001b[39m\u001b[32m.\u001b[39m\u001b[32m.\u001b[39m\u001b[32m.\u001b[39m\u001b[32m.\u001b[39m\u001b[32m.\u001b[39m\n"
      ]
     }
    ],
@@ -32,205 +32,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "id": "9ee31e18-7a99-4ae8-bdc1-3dddee7447a0",
+   "execution_count": 217,
+   "id": "a969a14e-3616-4f52-b6ea-605d57af882a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style>\n",
-       ".list-inline {list-style: none; margin:0; padding: 0}\n",
-       ".list-inline>li {display: inline-block}\n",
-       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
-       "</style>\n",
-       "<ol class=list-inline><li>'freq'</li><li>'spec'</li><li>'coh'</li><li>'phase'</li><li>'kernel'</li><li>'df'</li><li>'bandwidth'</li><li>'fxx'</li><li>'Lh'</li><li>'n.used'</li><li>'details'</li><li>'orig.n'</li><li>'series'</li><li>'snames'</li><li>'method'</li><li>'taper'</li><li>'pad'</li><li>'detrend'</li><li>'demean'</li></ol>\n"
-      ],
-      "text/latex": [
-       "\\begin{enumerate*}\n",
-       "\\item 'freq'\n",
-       "\\item 'spec'\n",
-       "\\item 'coh'\n",
-       "\\item 'phase'\n",
-       "\\item 'kernel'\n",
-       "\\item 'df'\n",
-       "\\item 'bandwidth'\n",
-       "\\item 'fxx'\n",
-       "\\item 'Lh'\n",
-       "\\item 'n.used'\n",
-       "\\item 'details'\n",
-       "\\item 'orig.n'\n",
-       "\\item 'series'\n",
-       "\\item 'snames'\n",
-       "\\item 'method'\n",
-       "\\item 'taper'\n",
-       "\\item 'pad'\n",
-       "\\item 'detrend'\n",
-       "\\item 'demean'\n",
-       "\\end{enumerate*}\n"
-      ],
-      "text/markdown": [
-       "1. 'freq'\n",
-       "2. 'spec'\n",
-       "3. 'coh'\n",
-       "4. 'phase'\n",
-       "5. 'kernel'\n",
-       "6. 'df'\n",
-       "7. 'bandwidth'\n",
-       "8. 'fxx'\n",
-       "9. 'Lh'\n",
-       "10. 'n.used'\n",
-       "11. 'details'\n",
-       "12. 'orig.n'\n",
-       "13. 'series'\n",
-       "14. 'snames'\n",
-       "15. 'method'\n",
-       "16. 'taper'\n",
-       "17. 'pad'\n",
-       "18. 'detrend'\n",
-       "19. 'demean'\n",
-       "\n",
-       "\n"
-      ],
-      "text/plain": [
-       " [1] \"freq\"      \"spec\"      \"coh\"       \"phase\"     \"kernel\"    \"df\"       \n",
-       " [7] \"bandwidth\" \"fxx\"       \"Lh\"        \"n.used\"    \"details\"   \"orig.n\"   \n",
-       "[13] \"series\"    \"snames\"    \"method\"    \"taper\"     \"pad\"       \"detrend\"  \n",
-       "[19] \"demean\"   "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "n=100; t = 1:n; \n",
-    "x = cos(2*pi*t*(1/6)) + sin(2*pi*t*(1/3))\n",
-    "s <- mvspec(x, plot = FALSE)\n",
-    "names(s)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 196,
-   "id": "fb1ffa07-61cc-43f0-a66c-b4d4508caffa",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table class=\"dataframe\">\n",
-       "<caption>A matrix: 3 × 2 of type dbl</caption>\n",
-       "<thead>\n",
-       "\t<tr><th scope=col>freq</th><th scope=col>spec</th></tr>\n",
-       "</thead>\n",
-       "<tbody>\n",
-       "\t<tr><td>0.25</td><td>24.39435</td></tr>\n",
-       "\t<tr><td>0.33</td><td>17.30210</td></tr>\n",
-       "\t<tr><td>0.17</td><td>16.20202</td></tr>\n",
-       "</tbody>\n",
-       "</table>\n"
-      ],
-      "text/latex": [
-       "A matrix: 3 × 2 of type dbl\n",
-       "\\begin{tabular}{ll}\n",
-       " freq & spec\\\\\n",
-       "\\hline\n",
-       "\t 0.25 & 24.39435\\\\\n",
-       "\t 0.33 & 17.30210\\\\\n",
-       "\t 0.17 & 16.20202\\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/markdown": [
-       "\n",
-       "A matrix: 3 × 2 of type dbl\n",
-       "\n",
-       "| freq | spec |\n",
-       "|---|---|\n",
-       "| 0.25 | 24.39435 |\n",
-       "| 0.33 | 17.30210 |\n",
-       "| 0.17 | 16.20202 |\n",
-       "\n"
-      ],
-      "text/plain": [
-       "     freq spec    \n",
-       "[1,] 0.25 24.39435\n",
-       "[2,] 0.33 17.30210\n",
-       "[3,] 0.17 16.20202"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table class=\"dataframe\">\n",
-       "<caption>A matrix: 3 × 2 of type dbl</caption>\n",
-       "<thead>\n",
-       "\t<tr><th scope=col>freq</th><th scope=col>spec</th></tr>\n",
-       "</thead>\n",
-       "<tbody>\n",
-       "\t<tr><td>0.25</td><td>24.39435</td></tr>\n",
-       "\t<tr><td>0.33</td><td>17.30210</td></tr>\n",
-       "\t<tr><td>0.17</td><td>16.20202</td></tr>\n",
-       "</tbody>\n",
-       "</table>\n"
-      ],
-      "text/latex": [
-       "A matrix: 3 × 2 of type dbl\n",
-       "\\begin{tabular}{ll}\n",
-       " freq & spec\\\\\n",
-       "\\hline\n",
-       "\t 0.25 & 24.39435\\\\\n",
-       "\t 0.33 & 17.30210\\\\\n",
-       "\t 0.17 & 16.20202\\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/markdown": [
-       "\n",
-       "A matrix: 3 × 2 of type dbl\n",
-       "\n",
-       "| freq | spec |\n",
-       "|---|---|\n",
-       "| 0.25 | 24.39435 |\n",
-       "| 0.33 | 17.30210 |\n",
-       "| 0.17 | 16.20202 |\n",
-       "\n"
-      ],
-      "text/plain": [
-       "     freq spec    \n",
-       "[1,] 0.25 24.39435\n",
-       "[2,] 0.33 17.30210\n",
-       "[3,] 0.17 16.20202"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "source(\"TSanalysis.R\")\n",
-    "n=100; t = 1:n; \n",
-    "x = cos(2*pi*t*(1/6)) + sin(4*pi*t*(1/3)) + sin(6*pi*t*(1/4))\n",
-    "s <- mvspec(x, plot = FALSE)\n",
-    "\n",
-    "m <- matrix(c(s$freq, s$spec), byrow = F, nc = 2)\n",
-    "m <- matrix(m[localMaxima(m[,2]), ], byrow = F, nc = 2)\n",
-    "m <- matrix(m[(m[,2] > mean(s$spec)), ], byrow = F, nc = 2)\n",
-    "m <- matrix(m[order(-m[,2]), ], byrow = F, nc = 2)\n",
-    "\n",
-    "#s <- mvspec2(x, mark = TRUE); s$maxSpecs\n",
-    "\n",
-    "n=100; t = 1:n; \n",
-    "x = cos(2*pi*t*(1/6)) + sin(4*pi*t*(1/3)) + sin(6*pi*t*(1/4))\n",
-    "s <- mvspec2(x, plot = FALSE)\n",
-    "exp <- matrix(c(c(0.25, 0.33, 0.17), \n",
-    "                c(24.3943512420822, 17.3020987496783, 16.2020222767867)), \n",
-    "              byrow = F, nc = 2)\n",
-    "colnames(exp) = c(\"freq\", \"spec\")\n",
-    "exp; s$maxSpecs\n",
-    "expect_equal(s$maxSpecs, exp)"
+    "WN <- arima.sim(model = list(order = c(0, 0, 0)), n = 100)\n",
+    "ma1 <- arima.sim(model = list(ma = 0.5), n = 100)\n"
    ]
   },
   {
